# sc2apm

./: CMakeLists.txt  README.md  ascii_flame.txt  main.cpp  shell.nix
include/: sc2actions.hpp
src/: main.cpp  sc2actions.cpp
